tests/baselines/reference/objectTypesIdentityWithGenericCallSignaturesOptionalParams3(strict=true).errors.txt
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(6,33): error TS2322: Type 'null' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(10,26): error TS2322: Type 'null' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(14,27): error TS2322: Type 'null' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(28,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(29,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(32,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(33,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(36,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(37,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(40,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(41,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(44,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(45,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(48,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(49,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(52,10): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(53,10): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(56,10): error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(57,10): error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(60,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(61,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(64,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(65,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(68,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(69,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(72,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(73,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(76,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(77,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(80,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(81,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(84,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(85,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(88,10): error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(89,10): error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(92,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(93,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(96,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(97,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(100,10): error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts(101,10): error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.


==== objectTypesIdentityWithGenericCallSignaturesOptionalParams3.ts (41 errors) ====
    // Two call or construct signatures are considered identical when they have the same number of type parameters and, considering those 
    // parameters pairwise identical, have identical type parameter constraints, identical number of parameters with identical kind(required, 
    // optional or rest) and types, and identical return types.
    
    class A {
        foo<T, U>(x: T, y?: U): T { return null; }
                                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.
    }
    
    class B<T, U> {
        foo(x: T, y: U): T { return null; }
                             ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.
    }
    
    class C<T, U> {
        foo(x: T, y?: U): T { return null; }
                              ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.
    }
    
    interface I<T, U> {
        foo(x: T, y?: U): T;
    }
    
    interface I2 {
        foo<T, U>(x: T, y: U): T;
    }
    
    var a: { foo<T, U>(x: T, y?: U): T }
    var b = { foo<T, U>(x: T, y: U) { return x; } };
    
    function foo1(x: A);
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: A); // error
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: any) { }
    
    function foo1b(x: B<string, number>);
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: B<string, number>); // error
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: any) { }
    
    function foo1c(x: C<string, number>);
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: C<string, number>); // error
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: any) { }
    
    function foo2(x: I<string, number>);
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: I<string, number>); // error
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: typeof a); // error
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: any) { }
    
    function foo4(x: typeof b);
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: typeof b); // error
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: any) { }
    
    function foo5(x: A);
             ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5(x: B<string, number>); // ok
             ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5(x: any) { }
    
    function foo5b(x: A);
             ~~~~~
!!! error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5b(x: C<string, number>); // ok
             ~~~~~
!!! error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5b(x: any) { }
    
    function foo6(x: A);
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: I<string, number>); // ok
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: any) { }
    
    function foo7(x: A);
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: typeof a); // no error, bug?
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: any) { }
    
    function foo8(x: B<string, number>);
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: I<string, number>); // ok
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: any) { }
    
    function foo9(x: B<string, number>);
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: C<string, number>); // ok
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: any) { }
    
    function foo10(x: B<string, number>);
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: typeof a); // ok
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: any) { }
    
    function foo11(x: B<string, number>);
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: typeof b); // ok
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: any) { }
    
    function foo12(x: I<string, number>);
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: C<string, number>); // error
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: any) { }
    
    function foo12b(x: I2);
             ~~~~~~
!!! error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12b(x: C<string, number>); // ok
             ~~~~~~
!!! error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12b(x: any) { }
    
    function foo13(x: I<string, number>);
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: typeof a); // ok
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: any) { }
    
    function foo14(x: I<string, number>);
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: typeof b); // ok
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: any) { }
    
    function foo15(x: I2);
             ~~~~~
!!! error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo15(x: C<string, number>); // ok
             ~~~~~
!!! error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo15(x: any) { }